SPARKC-398: Remove demos module